--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
             <version>${mybatis.spring.version}</version>  
         </dependency>  
         <!--mybatis end-->  
-        
+		     
         <!-- mysql-connector -->  
         <dependency>  
             <groupId>mysql</groupId>  
@@ -212,6 +212,13 @@
             <version>${jstl.version}</version>  
         </dependency>  
         
+       <!-- jedis -->
+       <dependency>
+			    <groupId>redis.clients</groupId>
+			    <artifactId>jedis</artifactId>
+			    <version>2.8.1</version>
+		</dependency>
+		       
         <!-- start apache -->  
         <dependency>  
             <groupId>commons-fileupload</groupId>  
