--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 	
 	
   <dependencies>
-   <!-- junit -->  
+  <!-- junit -->  
         <dependency>  
             <groupId>junit</groupId>  
             <artifactId>junit</artifactId>  
@@ -157,7 +157,7 @@
             <version>${mybatis.spring.version}</version>  
         </dependency>  
         <!--mybatis end-->  
-		     
+        
         <!-- mysql-connector -->  
         <dependency>  
             <groupId>mysql</groupId>  
@@ -172,13 +172,45 @@
             <version>${druid.version}</version>  
         </dependency> 
         
+        <!-- redis/jedis -->
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-redis</artifactId>
+				<version>1.7.2.RELEASE</version>
+			</dependency>
+
+			<dependency>
+				<groupId>redis.clients</groupId>
+				<artifactId>jedis</artifactId>
+				<version>2.8.1</version>
+				<type>jar</type>
+   				 <scope>compile</scope>
+			</dependency>
+         
          <!-- jackson -->  
         <dependency>  
+            <groupId>commons-beanutils</groupId>  
+            <artifactId>commons-beanutils</artifactId>  
+            <version>1.9.2</version>  
+        </dependency>
+        
+        <dependency>  
+            <groupId>com.fasterxml.jackson.core</groupId>  
+            <artifactId>jackson-databind</artifactId>  
+            <version>2.5.0</version>  
+        </dependency>
+        
+         <dependency>  
             <groupId>org.codehaus.jackson</groupId>  
             <artifactId>jackson-mapper-asl</artifactId>  
-            <version>${jackson.version}</version>  
-        </dependency> 
+            <version>1.9.13</version>  
+        </dependency>
         
+        <dependency>  
+            <groupId>org.codehaus.jackson</groupId>  
+            <artifactId>jackson-core-asl</artifactId>  
+            <version>1.9.13</version>  
+        </dependency>
          <!-- log start -->  
         <dependency>  
             <groupId>log4j</groupId>  
@@ -212,13 +244,6 @@
             <version>${jstl.version}</version>  
         </dependency>  
         
-       <!-- jedis -->
-       <dependency>
-			    <groupId>redis.clients</groupId>
-			    <artifactId>jedis</artifactId>
-			    <version>2.8.1</version>
-		</dependency>
-		       
         <!-- start apache -->  
         <dependency>  
             <groupId>commons-fileupload</groupId>  
