--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
 	id="WebApp_ID" version="3.1">
 	<display-name>heJuRuizeng-user</display-name>
 	
+	<welcome-file-list>
+		<welcome-file>/common/home/index.hjrz</welcome-file>
+	</welcome-file-list>
+	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring/spring-db.xml</param-value>
@@ -45,6 +49,11 @@
         <param-name>log4jRefreshInterval</param-name>  
         <param-value>60000</param-value>  
     </context-param>  
+    
+    <context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>hjrzuser.root</param-value>
+	</context-param>
     <!-- 字符集 过滤器 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
